Improve dataGridView model (include signature in SchedItem model)

--- a/ÖvergripandeBemanningBro-v3.0.2/Form1.resx
+++ b/ÖvergripandeBemanningBro-v3.0.2/Form1.resx
@@ -8055,6 +8055,9 @@
         +rL4K/8feNXxB263pYkAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="schedItemBindingSource5.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>251, 102</value>
+  </metadata>
   <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAk0AAAJLCAYAAAD6o6JFAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
@@ -10417,7 +10420,7 @@
   <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="activity.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="signature.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -11052,6 +11055,9 @@
         XKh8STla2cy7LSGkio6RecqBSvhb7A+Vjyn7eredjLQe8P8BfaXYpGZZ65QAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="schedItemBindingSource4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 102</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>69</value>
   </metadata>
